[gd_scene load_steps=13 format=3 uid="uid://4wkj23cavyvp"]

[ext_resource type="Texture2D" uid="uid://bkgis52314jjg" path="res://Assets/Walk/Walk0.png" id="1_0sx41"]
[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1_oopub"]
[ext_resource type="Texture2D" uid="uid://diw4yecf8nwmn" path="res://Assets/Walk/Walk1.png" id="2_solu2"]
[ext_resource type="Texture2D" uid="uid://5csnglfwiag5" path="res://Assets/Rotate/Rotate0.png" id="3_8hnis"]
[ext_resource type="Texture2D" uid="uid://c4jdtm7n8ow2j" path="res://Assets/Walk/Walk2.png" id="3_qibhx"]
[ext_resource type="Texture2D" uid="uid://hk26n5n0fqo4" path="res://Assets/Walk/Walk3.png" id="4_emhft"]
[ext_resource type="Texture2D" uid="uid://sgtoaa8j4uv3" path="res://Assets/Rotate/Rotate1.png" id="4_scp8e"]
[ext_resource type="Texture2D" uid="uid://xnjccry62x2w" path="res://Assets/Rotate/Rotate2.png" id="5_h0q6o"]
[ext_resource type="Texture2D" uid="uid://we21rfyfdqwr" path="res://Assets/Rotate/Rotate3.png" id="6_n3xm6"]
[ext_resource type="AudioStream" uid="uid://hirqvqprbha8" path="res://Assets/jump.ogg" id="10_6giry"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3ft1r"]
radius = 14.0

[sub_resource type="SpriteFrames" id="SpriteFrames_bvt22"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0sx41")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8hnis")
}, {
"duration": 1.0,
"texture": ExtResource("4_scp8e")
}, {
"duration": 1.0,
"texture": ExtResource("5_h0q6o")
}, {
"duration": 1.0,
"texture": ExtResource("6_n3xm6")
}, {
"duration": 1.0,
"texture": ExtResource("3_8hnis")
}, {
"duration": 1.0,
"texture": ExtResource("4_scp8e")
}, {
"duration": 1.0,
"texture": ExtResource("5_h0q6o")
}, {
"duration": 1.0,
"texture": ExtResource("6_n3xm6")
}, {
"duration": 1.0,
"texture": ExtResource("3_8hnis")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_8hnis")
}, {
"duration": 1.0,
"texture": ExtResource("4_scp8e")
}, {
"duration": 1.0,
"texture": ExtResource("5_h0q6o")
}, {
"duration": 1.0,
"texture": ExtResource("6_n3xm6")
}, {
"duration": 1.0,
"texture": ExtResource("3_8hnis")
}],
"loop": false,
"name": &"rotate",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0sx41")
}, {
"duration": 1.0,
"texture": ExtResource("2_solu2")
}, {
"duration": 1.0,
"texture": ExtResource("3_qibhx")
}, {
"duration": 1.0,
"texture": ExtResource("4_emhft")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0sx41")
}, {
"duration": 1.0,
"texture": ExtResource("2_solu2")
}, {
"duration": 1.0,
"texture": ExtResource("3_qibhx")
}, {
"duration": 1.0,
"texture": ExtResource("4_emhft")
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_oopub")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3ft1r")

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
scale = Vector2(2, 2)
emitting = false
amount = 25
lifetime = 0.1
speed_scale = 0.8
emission_shape = 3
emission_rect_extents = Vector2(1, 3)
direction = Vector2(-500, 0)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 300.0
initial_velocity_max = 500.0
scale_amount_min = 3.0
scale_amount_max = 5.0
color = Color(0.956863, 0.87451, 0.745098, 1)

[node name="Squid" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bvt22")
animation = &"die"
autoplay = "walk"
frame = 8
frame_progress = 1.0

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_6giry")
volume_db = -15.928

[connection signal="timeout" from="CollisionTimer" to="." method="_on_collision_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="Squid" to="." method="_on_squid_animation_finished"]
